# viral-snake

./: .gitignore  README.md  Snakefile.base.smk  Snakefile.example.smk  Snakefile.multi_dataset.smk  Snakefile.smk  Snakefile.virome3.smk  Snakefile.virome4-Polina.smk  Snakefile.virome4.smk  Snakefile.virome5.smk  Snakefile_merge_lanes.smk  pyproject.toml
config/: config.template.yaml
envs/: assembly.yaml  blast.yaml  cutadapt.yaml  diamond.yaml  kraken2.yaml  minimap2.yaml  mmseqs2.yaml  phyloseq.yaml  qc.yaml  seqkit.yaml  seqtk.yaml  taxonkit.yaml  viral_annotation.yaml  virsorter_solved.yaml
modules/: minimap2.smk
modules/alignment_plot/: alignment_plot.py  minimap2_browser_state.pkl  readme.md
modules/assembly/: anvio.smk  megahit.smk  metaspades.smk  qc.smk
modules/blast/: blast.smk
modules/diamond/: diamond.smk  diamond_filter.smk  diamond_lca_taxonkit.smk  diamond_presets.yaml  presets.yaml
modules/dwn_refs_from_refseq/: dwn_refs.smk  env.yaml  refseq_reference.py
modules/kraken2/: create_phyloseq.R  heatmap_presets.yaml  kraken2.smk  kraken2_contigs.smk  plot_heatmap.R
modules/lca/: lca.py  lca.smk
modules/minimap2/: minimap2.smk
modules/mmseqs2/: cluster.smk
modules/mosdepth/: env.yaml  plot_mosdepth.py  plot_mosdepth.smk
modules/qc/: cutadapt.smk  fastqc.smk  read_stats.smk  subsample.smk
modules/strobealign/: env.yaml  strobealign.smk
scripts/: build_abundance_table.py  create_feature_table.py  plot_heatmap.R
viral_snake/: __init__.py  collections.py  utils.py
viral_snake/cli/: __init__.py  create.py  info.py  run.py  (+1 more)
(+16 files in other folders)
